# dagbladet

./: .ghci  README  dagbladet.cabal
src/: Main.hs  scraped.lhs
src/App/: Build.hs  Config.hs  Gen.hs  Get.hs
src/Dagbladet/: Headline.hs
tests/Dagbladet/: HeadlineSpec.hs
tools/: loop.lhs
