name: dagbladet
version: 0.0.0

cabal-version: >= 1.2
build-type: Simple

executable dagbladet
  hs-source-dirs:
      src

  main-is: Main.hs

  build-depends:
      base
    , bytestring
    , text
    , filepath
    , directory
    , tagsoup
    , download
    , SHA2

library
  hs-source-dirs:
      src

  build-depends:
      base
    , bytestring
    , text
    , filepath
    , directory
    , tagsoup
    , download
    , zlib

  exposed-modules:
      Dagbladet.Headline

  other-modules:
      App.Config
    , App.Get
    , App.Build
    , App.Gen
