name: dagbladet
version: 0.0.1.0

license: MIT
license-file: COPYING

cabal-version: >= 1.4
build-type: Simple

executable dagbladet
  hs-source-dirs:
      src

  main-is: Main.hs

  build-depends:
      base
    , bytestring
    , text
    , filepath
    , directory
    , tagsoup
    , download
    , SHA2
    , markov-chain
    , random

library
  hs-source-dirs:
      src

  build-depends:
      base
    , bytestring
    , text
    , filepath
    , directory
    , tagsoup
    , download
    , zlib

  exposed-modules:
      Dagbladet.Headline

  other-modules:
      App.Config
    , App.Get
    , App.Build
    , App.Gen
